// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`links > AnchorLink > should handle click event without an onClick callback > expected html 1`] = `
<div>
  <a
    data-testid="anchor-link"
    href="#id"
  >
    click here
  </a>
  <div
    id="id"
  >
    Some content.
  </div>
</div>
`;

exports[`links > AnchorLink > should render anchor link component > expected html 1`] = `
<div>
  <a
    data-testid="anchor-link"
    href="#id"
  >
    click here
  </a>
  <div
    id="id"
  >
    Some content.
  </div>
</div>
`;

exports[`links > AnchorLink > should scroll to the correct element > expected html 1`] = `
<div>
  <a
    data-testid="anchor-link"
    href="#id"
  >
    click here
  </a>
  <div
    id="id"
  >
    Some content.
  </div>
</div>
`;

exports[`links > AppLink > should render a disabled link > expected html 1`] = `
<div>
  <a
    aria-disabled="true"
    role="link"
  >
    This is a test
  </a>
</div>
`;

exports[`links > AppLink > should render a link with a specified language when provided > expected html 1`] = `
<div>
  <a
    data-discover="true"
    href="/en"
    lang="en"
  >
    This is a test
  </a>
</div>
`;

exports[`links > AppLink > should render a link with the current language if no specific language is provided > expected html 1`] = `
<div>
  <a
    data-discover="true"
    href="/fr"
  >
    This is a test
  </a>
</div>
`;

exports[`links > AppLink > should throw an error if no language is available > expected html 1`] = `
<div>
  The \`lang\` parameter was not provided, and the current language could not be determined from the request
</div>
`;

exports[`links > InlineLink > should correctly render an InlineLink when the file property is provided > expected html 1`] = `
<div>
  <a
    class="text-slate-700 underline hover:text-blue-700 focus:text-blue-700"
    data-discover="true"
    href="/fr"
  >
    This is a test
  </a>
</div>
`;

exports[`links > InlineLink > should correctly render an InlineLink when the to property is provided > expected html 1`] = `
<div>
  <a
    class="text-slate-700 underline hover:text-blue-700 focus:text-blue-700"
    href="https://example.com/"
  >
    This is a test
  </a>
</div>
`;
